# DS108-Clickbait

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: pytest.yml
configs/: __init__.py  annotation_config.yaml  dedup_config.yaml  pipeline_config.prod.yaml  pipeline_config.yaml  review_config.yaml  sources_config.py
data/final/: README.md  dataset_card.md  export_report.json  metadata.json  sources.json  statistics.json  test.parquet  validation.parquet
data/raw/: afamily_raw.jsonl  kenh14_raw.jsonl  nhandan_raw.jsonl  soha_raw.jsonl  thanhnien_raw.jsonl  tuoitre_raw.jsonl
data/review/: decisions_huy.jsonl
docs/: annotation_guideline.md  data_dictionary.md
docs/ADR/: 001-use-local-llms-ollama.md
logs/: baseline_results.json  error_analysis.json  iaa_results.json  qa_blind_test_results.json  split_stats.json  test_results.json
notebooks/: 01_data_collection.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb
prompts/: annotation_gemma.txt  annotation_qwen.txt
reports/: bao_cao_khoa_hoc_DS108.md
src/: __init__.py
src/annotation/: __init__.py  annotation_engine.py  voting.py
src/dedup/: __init__.py  exact_dedup.py  semantic_dedup.py
src/evaluation/: __init__.py  baseline_models.py  eda_visualizer.py  feature_engineering.py  iaa_calculator.py  run_full_phase7.py  run_tests.py
tests/: test_annotation.py  test_dedup.py  test_exporter.py  test_iaa.py  test_quality.py  test_text_cleaner.py
(+28 files in other folders)
