[tool.poetry]
name = "vietnamese-clickbait-pipeline"
version = "1.0.0"
description = "A pipeline for constructing a Vietnamese clickbait detection dataset."
authors = ["Huy"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
trafilatura = "^1.6.0"
beautifulsoup4 = "^4.12.0"
newspaper3k = "^0.2.8"
lxml = ">=4.9.0"
requests = "^2.31.0"
httpx = ">=0.24.0"
ftfy = "^6.1.0"
python-dateutil = "^2.8.0"
pytz = "^2024.1"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
pyarrow = ">=14.0.0"
pyyaml = ">=6.0"
jsonschema = ">=4.19.0"
pydantic = ">=2.0.0"
sentence-transformers = ">=2.2.0"
torch = { version = ">=2.0.0", source = "pytorch-cu118" }
transformers = ">=4.30.0"
pyvi = "^0.1.1"
ollama = ">=0.1.0"
structlog = "^23.0.0"
rich = "^13.0.0"
tqdm = "^4.65.0"
pathvalidate = "^3.0.0"
scikit-learn = ">=1.3.0"
optuna = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
mypy = "^1.0.0"
pyright = "^1.1.0"
types-pyyaml = "^6.0"
types-requests = "^2.31.0"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
